--- a/package.json
+++ b/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "12.1.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "styled-components": "^5.3.5"
-  },
-  "devDependencies": {
-    "@types/node": "17.0.23",
-    "@types/react": "18.0.0",
-    "@types/react-dom": "18.0.0",
-    "@types/styled-components": "^5.1.25",
-    "babel-plugin-styled-components": "^2.0.7",
-    "eslint": "8.12.0",
-    "eslint-config-next": "12.1.4",
-    "typescript": "4.6.3"
-  }
+    "name": "my-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "prepare": "husky install"
+    },
+    "lint-staged": {
+        "**/*": "prettier --write --ignore-unknown"
+    },
+    "dependencies": {
+        "next": "12.1.4",
+        "react": "18.0.0",
+        "react-dom": "18.0.0",
+        "styled-components": "^5.3.5"
+    },
+    "devDependencies": {
+        "@types/node": "17.0.23",
+        "@types/react": "18.0.0",
+        "@types/react-dom": "18.0.0",
+        "@types/styled-components": "^5.1.25",
+        "babel-plugin-styled-components": "^2.0.7",
+        "eslint": "8.12.0",
+        "eslint-config-next": "12.1.4",
+        "husky": "^7.0.4",
+        "lint-staged": "^12.3.7",
+        "prettier": "2.6.2",
+        "typescript": "4.6.3"
+    }
 }
